@@ -28,6 +28,7 @@ Date: ???
     - Added Ore sorting facility 5
     - Buffed recipes for Silicon arbide, Silicon nitride, Tungsten carbide plate, Copper-tungsten plate
     - SpaceX techs Habitation Modules and Life Support Systems require bio science
+    - Doubled the slag produced by ore sorting recipes
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed localised name of Mad Clown's Ore crystallization recipes
